Feat #2175: Implement webmanifest

--- a/docs/community/example-advanced.caddy.conf
+++ b/docs/community/example-advanced.caddy.conf
@@ -96,6 +96,9 @@ your-sandbox-domain.com:443 {
 		# child-src defines valid sources for webworkers and nested browser contexts.
 		# It is deprecated in favour of worker-src and frame-src.
 		childSrc   "https://your-main-domain.com"
+
+		# specifies valid sources for loading webmanifest.
+		webManifestSrc   "https://your-main-domain.com"
 		
 		# worker-src valid sources for Worker, Shared Worker, or Service Worker scripts.
 		# Supercedes child-src, but is unfortunately not yet universally supported.
@@ -136,10 +139,10 @@ your-sandbox-domain.com:443 {
 		host "your-sandbox-domain.com"
 		path_regexp "^\\/unsafeiframe\\/inner\\.html.*$"
 	}
-	header @privilegedScope1 Content-Security-Policy "default-src 'none'; child-src {vars.childSrc}; worker-src {vars.workerSrc}; media-src {vars.mediaSrc}; style-src {vars.styleSrc}; script-src {vars.scriptSrcUnsafe}; connect-src {vars.connectSrc}; font-src {vars.fontSrc}; img-src {vars.imgSrc}; frame-src {vars.frameSrc}; frame-ancestors {vars.frameAncestors}"
-	header @privilegedScope2 Content-Security-Policy "default-src 'none'; child-src {vars.childSrc}; worker-src {vars.workerSrc}; media-src {vars.mediaSrc}; style-src {vars.styleSrc}; script-src {vars.scriptSrcUnsafe}; connect-src {vars.connectSrc}; font-src {vars.fontSrc}; img-src {vars.imgSrc}; frame-src {vars.frameSrc}; frame-ancestors {vars.frameAncestors}"
-	header @privilegedScope3 Content-Security-Policy "default-src 'none'; child-src {vars.childSrc}; worker-src {vars.workerSrc}; media-src {vars.mediaSrc}; style-src {vars.styleSrc}; script-src {vars.scriptSrcUnsafe}; connect-src {vars.connectSrc}; font-src {vars.fontSrc}; img-src {vars.imgSrc}; frame-src {vars.frameSrc}; frame-ancestors {vars.frameAncestors}"
-	header ?Content-Security-Policy "default-src 'none'; child-src {vars.childSrc}; worker-src {vars.workerSrc}; media-src {vars.mediaSrc}; style-src {vars.styleSrc}; script-src {vars.scriptSrc}; connect-src {vars.connectSrc}; font-src {vars.fontSrc}; img-src {vars.imgSrc}; frame-src {vars.frameSrc}; frame-ancestors {vars.frameAncestors}"
+	header @privilegedScope1 Content-Security-Policy "default-src 'none'; child-src {vars.childSrc}; manifest-src {vars.webManifestSrc}; worker-src {vars.workerSrc}; media-src {vars.mediaSrc}; style-src {vars.styleSrc}; script-src {vars.scriptSrcUnsafe}; connect-src {vars.connectSrc}; font-src {vars.fontSrc}; img-src {vars.imgSrc}; frame-src {vars.frameSrc}; frame-ancestors {vars.frameAncestors}"
+	header @privilegedScope2 Content-Security-Policy "default-src 'none'; child-src {vars.childSrc}; manifest-src {vars.webManifestSrc}; worker-src {vars.workerSrc}; media-src {vars.mediaSrc}; style-src {vars.styleSrc}; script-src {vars.scriptSrcUnsafe}; connect-src {vars.connectSrc}; font-src {vars.fontSrc}; img-src {vars.imgSrc}; frame-src {vars.frameSrc}; frame-ancestors {vars.frameAncestors}"
+	header @privilegedScope3 Content-Security-Policy "default-src 'none'; child-src {vars.childSrc}; manifest-src {vars.webManifestSrc}; worker-src {vars.workerSrc}; media-src {vars.mediaSrc}; style-src {vars.styleSrc}; script-src {vars.scriptSrcUnsafe}; connect-src {vars.connectSrc}; font-src {vars.fontSrc}; img-src {vars.imgSrc}; frame-src {vars.frameSrc}; frame-ancestors {vars.frameAncestors}"
+	header ?Content-Security-Policy "default-src 'none'; child-src {vars.childSrc}; manifest-src {vars.webManifestSrc}; worker-src {vars.workerSrc}; media-src {vars.mediaSrc}; style-src {vars.styleSrc}; script-src {vars.scriptSrc}; connect-src {vars.connectSrc}; font-src {vars.fontSrc}; img-src {vars.imgSrc}; frame-src {vars.frameSrc}; frame-ancestors {vars.frameAncestors}"
 	
 	# Add support for .mjs files used by pdfjs
 	@fileModuleJS {
