--- a/docs/example-advanced.nginx.conf
+++ b/docs/example-advanced.nginx.conf
@@ -147,6 +147,9 @@ server {
     # deprecated in favour of worker-src and frame-src
     set $childSrc   "https://${main_domain}";
 
+    # specifies valid sources for loading webmanifest.
+    set $webManifestSrc   "https://${main_domain}";
+
     # specifies valid sources for Worker, SharedWorker, or ServiceWorker scripts.
     # supercedes child-src but is unfortunately not yet universally supported.
     set $workerSrc  "'self'";
@@ -222,7 +225,7 @@ server {
         add_header Cache-Control $cacheControl;
 
         # Set all the rules you composed above.
-        add_header Content-Security-Policy "default-src 'none'; child-src $childSrc; worker-src $workerSrc; media-src $mediaSrc; style-src $styleSrc; script-src $scriptSrc; connect-src $connectSrc; font-src $fontSrc; img-src $imgSrc; frame-src $frameSrc; frame-ancestors $frameAncestors" always;
+        add_header Content-Security-Policy "default-src 'none'; child-src $childSrc; manifest-src $webManifestSrc; worker-src $workerSrc; media-src $mediaSrc; style-src $styleSrc; script-src $scriptSrc; connect-src $connectSrc; font-src $fontSrc; img-src $imgSrc; frame-src $frameSrc; frame-ancestors $frameAncestors" always;
     }
 
     location ^~ /customize.dist/ {
@@ -246,7 +249,7 @@ server {
             add_header Cache-Control $cacheControl;
 
             # Set all the rules you composed above.
-            add_header Content-Security-Policy "default-src 'none'; child-src $childSrc; worker-src $workerSrc; media-src $mediaSrc; style-src $styleSrc; script-src $scriptSrc; connect-src $connectSrc; font-src $fontSrc; img-src $imgSrc; frame-src $frameSrc; frame-ancestors $frameAncestors" always;
+            add_header Content-Security-Policy "default-src 'none'; child-src $childSrc; manifest-src $webManifestSrc; worker-src $workerSrc; media-src $mediaSrc; style-src $styleSrc; script-src $scriptSrc; connect-src $connectSrc; font-src $fontSrc; img-src $imgSrc; frame-src $frameSrc; frame-ancestors $frameAncestors" always;
         }
     }
     # try to load customizeable content via /customize/ and fall back to the default content
@@ -273,7 +276,7 @@ server {
             add_header Cache-Control $cacheControl;
 
             # Set all the rules you composed above.
-            add_header Content-Security-Policy "default-src 'none'; child-src $childSrc; worker-src $workerSrc; media-src $mediaSrc; style-src $styleSrc; script-src $scriptSrc; connect-src $connectSrc; font-src $fontSrc; img-src $imgSrc; frame-src $frameSrc; frame-ancestors $frameAncestors" always;
+            add_header Content-Security-Policy "default-src 'none'; child-src $childSrc; manifest-src $webManifestSrc; worker-src $workerSrc; media-src $mediaSrc; style-src $styleSrc; script-src $scriptSrc; connect-src $connectSrc; font-src $fontSrc; img-src $imgSrc; frame-src $frameSrc; frame-ancestors $frameAncestors" always;
         }
 
         try_files /customize/$uri /customize.dist/$uri;
@@ -389,7 +392,7 @@ server {
         add_header Cache-Control $cacheControl;
 
         # Set all the rules you composed above.
-        add_header Content-Security-Policy "default-src 'none'; child-src $childSrc; worker-src $workerSrc; media-src $mediaSrc; style-src $styleSrc; script-src $scriptSrc; connect-src $connectSrc; font-src $fontSrc; img-src $imgSrc; frame-src $frameSrc; frame-ancestors $frameAncestors" always;
+        add_header Content-Security-Policy "default-src 'none'; child-src $childSrc; manifest-src $webManifestSrc; worker-src $workerSrc; media-src $mediaSrc; style-src $styleSrc; script-src $scriptSrc; connect-src $connectSrc; font-src $fontSrc; img-src $imgSrc; frame-src $frameSrc; frame-ancestors $frameAncestors" always;
 
         try_files /customize/www/$uri /customize/www/$uri/index.html /src/$uri /www/$uri /www/$uri/index.html /src/$uri /customize/$uri;
     }
