--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "body-parser": "^1.20.4",
     "bootstrap": "^4.0.0",
     "bootstrap-tokenfield": "^0.12.0",
-    "chainpad": "^5.2.6",
+    "chainpad": "^5.3.1",
     "chainpad-crypto": "^0.3.0",
     "chainpad-listmap": "^1.2.0",
     "chainpad-netflux": "^1.3.0",
@@ -72,17 +72,18 @@
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.0",
-    "eslint": "^9.16.0",
+    "eslint": "^10.0.0",
     "eslint-plugin-compat": "^6.0.1",
+    "globals": "^17.3.0",
     "rollup": "^4.24.0",
-    "stylelint": "^16.9.0",
+    "stylelint": "^16.26.1",
     "stylelint-config-standard-less": "^3.0.1",
     "tslib": "^2.7.0",
     "typescript": "^5.6.2"
   },
   "overrides": {
     "minimist": "~1.2.3",
-    "minimatch": "~3.1.2",
+    "minimatch": "~10.2.2",
     "ws": "^8.17.1",
     "jquery": "3.6.0"
   },
@@ -96,6 +97,7 @@
     "offlinedev": "DEV=1 OFFLINE=1 node server.js",
     "package": "PACKAGE=1 node server.js",
     "lint": "eslint . && stylelint \"./customize.dist/src/less2/**/*.less\"",
+    "lint:debug": "DEBUG=eslint:* eslint .",
     "lint:js": "eslint .",
     "lint:less": "stylelint \"./customize.dist/src/less2/**/*.less\"",
     "lint:translations": "node ./scripts/translations/lint-translations.js",
